--- a/_includes/footer_undefined.html
+++ b/_includes/footer_undefined.html
@@ -44,7 +44,7 @@
 </script>
 </div>
 <script>
-  $('#ext1, #ext2, #ext3').attr('href', 'm' + 'ai' + 'lto' + ':' + 'contact' + String.fromCharCode(64) + 'nex' + 'ss' + '.c' + 'om');
-  $('#ext1, #ext2, #ext3').html('<i class="fa fa-envelope"></i> con' + 'tact' + String.fromCharCode(64) + 'nex' + 'ss' + '.' + 'com');
+  $('#ext1, #ext2, #ext3').attr('href', 'm' + 'ai' + 'lto' + ':map' + 'oart' + String.fromCharCode(64) + 'g' + 'mai' + 'l.c' + 'om');
+  $('#ext1, #ext2, #ext3').html('<i class="fa fa-envelope"></i> mapo' + 'art' + String.fromCharCode(64) + 'gma' + 'il' + '.' + 'com');
 </script>
     </footer>
