--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,13 +1,5 @@
 <head>
-  <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'UA-97241406-1');
-</script>
-
+  
   {% if page.description %}<title>{{ page.title }}</title>{% endif %}
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -30,7 +22,6 @@
 <script src="assets/default/js/jquery.min.js"></script>
 <script src="assets/default/js/myscript.js"></script>
 <script src="assets/default/js/owl.carousel.min.js"></script>
-<script src="assets/default/js/wow.min.js"></script>   <meta name="google-site-verification" content="">
-    <meta name="revisit-after" content="7 days">
+<script src="assets/default/js/wow.min.js"></script>   <meta name="revisit-after" content="7 days">
   <meta name="creator" content="Nexss.com">
 </head>
