--- a/assets/default/css/main.css
+++ b/assets/default/css/main.css
@@ -98,6 +98,7 @@ input {
 
 html,
 body {
+  font-family: "Lato", sans-serif;
   height: 99.5%;
 }
 
@@ -168,13 +169,13 @@ table {
   font-family: "Lato", sans-serif;
 }
 
-.varela {
+/* .varela {
   font-family: "Varela Round", sans-serif;
 }
 
 .montserrat {
   font-family: "Montserrat", sans-serif;
-}
+} */
 
 .light {
   font-weight: 300;
@@ -229,7 +230,7 @@ body img {
 .btn {
   text-decoration: none;
   text-transform: uppercase;
-  font-family: "Montserrat", sans-serif;
+  /* font-family: "Montserrat", sans-serif; */
   font-weight: 700;
   cursor: pointer;
   display: inline-block;
@@ -321,7 +322,7 @@ h3,
 h4 {
   text-align: left;
   margin-top: 30px;
-  font-family: "Varela Round", sans-serif;
+  /* font-family: "Varela Round", sans-serif; */
   color: #0f356c;
   font-size: 50px;
   line-height: 40px;
@@ -365,7 +366,7 @@ h4 {
 .block__title {
   text-align: center;
   margin-bottom: 50px;
-  font-family: "Varela Round", sans-serif;
+  /* font-family: "Varela Round", sans-serif; */
   color: #0f356c;
   font-size: 50px;
   line-height: 60px;
@@ -376,7 +377,7 @@ h4 {
   color: #ff4e00;
   font-size: 20px;
   line-height: 24px;
-  font-family: "Lato", sans-serif;
+  /* font-family: "Lato", sans-serif; */
   font-style: italic;
   margin-bottom: 2px;
 }
@@ -408,7 +409,7 @@ h4 {
   h4 {
     text-align: left;
     margin-top: 30px;
-    font-family: "Varela Round", sans-serif;
+    /* font-family: "Varela Round", sans-serif; */
     color: #0f356c;
     font-size: 50px;
     line-height: 40px;
@@ -435,7 +436,7 @@ p,
 div.block {
   font-size: 16px;
   line-height: 25px;
-  font-family: "Lato", sans-serif;
+  /* font-family: "Lato", sans-serif; */
   color: #262626;
 }
 
@@ -469,7 +470,7 @@ div.block {
   position: relative;
   color: #ffffff;
   font-size: 13px;
-  font-family: "Lato", sans-serif;
+  /* font-family: "Lato", sans-serif; */
 }
 
 .header__top .info li:last-child {
@@ -480,7 +481,7 @@ div.block {
   display: inline-block;
   color: #ffffff;
   font-size: 13px;
-  font-family: "Lato", sans-serif;
+  /* font-family: "Lato", sans-serif; */
   text-decoration: none;
 }
 
@@ -611,7 +612,7 @@ div.block {
   cursor: pointer;
   color: #ffffff;
   font-size: 17px;
-  font-family: "Varela Round", sans-serif;
+  /* font-family: "Varela Round", sans-serif; */
   text-decoration: none;
   -webkit-transition: all 0.2s ease-out;
   -moz-transition: all 0.2s ease-out;
@@ -752,7 +753,7 @@ div.block {
 .welcome {
   color: #fff;
   padding: 170px 0px 260px 0px;
-  font-family: "Varela Round", sans-serif;
+  /* font-family: "Varela Round", sans-serif; */
 }
 
 .header__bottom .welcome__wrap {
@@ -858,7 +859,7 @@ div.block {
   cursor: pointer;
   color: #262626;
   font-size: 18px;
-  font-family: "Varela Round", sans-serif;
+  /* font-family: "Varela Round", sans-serif; */
   text-decoration: none;
   -webkit-transition: all 0.2s ease-out;
   -moz-transition: all 0.2s ease-out;
@@ -1024,7 +1025,7 @@ div.block {
 }
 
 .services .item .title {
-  font-family: "Varela Round", sans-serif;
+  /* font-family: "Varela Round", sans-serif; */
   font-size: 20px;
   color: #262626;
   margin-bottom: 6px;
@@ -1032,7 +1033,6 @@ div.block {
 }
 
 .services .item h4 {
-  font-family: "Lato", sans-serif;
   font-size: 16px;
   color: #262626;
   margin-bottom: 6px;
