--- a/assets/doc/css/styles.css
+++ b/assets/doc/css/styles.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese');
+/* @import url('https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese'); */
 a:hover,
 a:focus {
   text-decoration: none;
-  transition: .3s;
+  transition: 0.3s;
   color: inherit;
   outline: 0;
 }
@@ -78,14 +78,14 @@ img {
 }
 body {
   background: #f5f5f5;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 .mb-center {
-  text-align: center!important;
+  text-align: center !important;
 }
 @media (max-width: 767px) {
   .d-flex {
-    display: block!important;
+    display: block !important;
   }
 }
 @media (max-width: 767px) {
@@ -110,7 +110,7 @@ body {
 }
 .date_created a {
   color: #3b42ba;
-  transition: .3s;
+  transition: 0.3s;
 }
 .date_created a:hover {
   text-decoration: underline;
@@ -143,7 +143,7 @@ body {
   }
 }
 .message .logo img {
-  transition: .3s ease;
+  transition: 0.3s ease;
 }
 .message h2 {
   display: inline-block;
@@ -178,7 +178,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  transition: .4s;
+  transition: 0.4s;
   background: rgba(0, 0, 0, 0.4);
   opacity: 0;
 }
@@ -195,7 +195,7 @@ body {
   font-weight: 500;
   line-height: 1.5;
   border-radius: 5px;
-  transition: .3s;
+  transition: 0.3s;
   padding: 13px;
   font-size: 17px;
   cursor: pointer;
@@ -209,4 +209,3 @@ body {
   background: #ff7200;
   color: #fff;
 }
-
